Reorganise files and add Ingress to kubernetes

--- a/compose/wdt-ingress/default.conf
+++ b/compose/wdt-ingress/default.conf
@@ -8,31 +8,19 @@ server {
 
     # Graphql API
     location ~ ^/graphql?(.*) {
-      set $upstream_graphql server;
-
-      proxy_pass http://$upstream_graphql:8000/graphql/;
       proxy_set_header      Host $host:$server_port;
       proxy_set_header      X-Forwarded-For $remote_addr;
       proxy_set_header      X-Forwarded-Proto $scheme;
-    }
 
-    # Django Admin
-    location ~ ^/admin?(.*) {
-      set $upstream_admin server;
-
-      proxy_pass http://$upstream_admin:8000/admin/$1$is_args$args;
-      proxy_set_header      Host $host:$server_port;
-      proxy_set_header      X-Forwarded-For $remote_addr;
-      proxy_set_header      X-Forwarded-Proto $scheme;
+      proxy_pass http://graphql:8000/graphql/;
     }
 
     # Web app
     location ~ ^/?(.*) {
-      set $upstream_webapp customer-webapp;
-
-      proxy_pass http://$upstream_webapp/$1$is_args$args;
       proxy_set_header      Host $host:$server_port;
       proxy_set_header      X-Forwarded-For $remote_addr;
       proxy_set_header      X-Forwarded-Proto $scheme;
+      
+      proxy_pass http://customer-webapp/;
     }
 }
